# gtunes

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: DEVELOPMENT.md  ROADMAP.md  TECHNICAL_DESIGN.md  YOUTUBE_MUSIC_OAUTH.md  discord-rich-presence.md
docs/releases/: 1.1.1.md  1.1.2.md  1.1.3.md  1.1.4.md  1.1.md
scripts/: build-appimage.sh
src/: app.rs  config.rs  discord.rs  main.rs
src/cache/: db.rs  mod.rs  schema.rs
src/cast/: mod.rs
src/jellyfin/: client.rs  mod.rs  models.rs
src/lyrics/: mod.rs
src/playback/: mod.rs  session.rs
src/ui/: mod.rs  styles.rs  window.rs
src/waveform/: mod.rs
src/youtube/: mod.rs
